syntax = "proto3";
package user;

service UserService {
    rpc checkEmailexists (CheckEmailRequest) returns (CheckEmailResponse) {}
    rpc createUser (CreateUserRequest) returns (CreateUserResponse) {}
    rpc getProfile (ID) returns (Profile) {}
}

message CheckEmailRequest {
    string email = 1;
}
message CheckEmailResponse {
    bool exists = 1;
}
message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}
message CreateUserResponse {
    string message = 1;
}

message ID {
    string id = 1;
}

message Profile {
    string id =1;
    string name =2;
    string email =3;
    string role =4;
 }